--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link href="styles.css" rel="stylesheet">
+    <div class=header><h2>Tic Tac Toe</h2></div>
+  </head>
+  <body>
+    <!-- where each cell of ur tic-tac-toe board will live -->
+
+    <div class="board" id="board">
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+    </div>
+
+    <div class="winning-message" id="winning-message">
+      <div data-winning-message-text>X wins</div>
+      <button id="restartButton">Restart</button>
+    </div>
 
 
+
+    <script type="text/javascript" src="app.js" ></script>
+  </body>
+</html>
