--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,16 @@
 
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Challenge 3</title>
+  </head>
+  <body>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin ></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin ></script>
+    <h1>Hello </h1>
+    <div id="app"></div>
+      <script src="compiled_app.js"></script>
+  </body>
+</html>
