--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,17 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div class="row" data-x="0" data-y="0"></div>
+    <div class="row" data-x="1" data-y="0"></div>
+    <div class="row" data-x="2" data-y="0"></div>
+    <div class="row" data-x="3" data-y="0"></div>
+    <div class="row" data-x="0" data-y="0"></div>
+    <div class="row" data-x="1" data-y="0"></div>
+    <div class="row" data-x="2" data-y="0"></div>
+    <div class="row" data-x="3" data-y="0"></div>
+    <div src="app"></div>
+  </body>
+</html>
